# AUV_Simulation

./: .gitignore  README.md
src/AUV_pkg/: package.xml  setup.cfg  setup.py
src/AUV_pkg/AUV_pkg/: __init__.py  camera_node.py  dvl_node.py  imu_node.py  main_node.py  motor_node.py  position_node.py
src/auv_bringup/: CMakeLists.txt  package.xml
src/auv_bringup/launch/: auv_simulation.launch.py
src/auv_interfaces/: CMakeLists.txt  package.xml
src/auv_interfaces/msg/: CVModel.msg  DVLData.msg  DetectedObject.msg  IMUData.msg  MotorsData.msg  ObjectsData.msg  PositionData.msg  TotalForce.msg
src/env_pkg/: package.xml  setup.cfg  setup.py
src/env_pkg/env_pkg/: __init__.py  drag_node.py  props_node.py
